# lo-mortgage-chatbot

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.gsd/: ARCHITECTURE.md  DECISIONS.md  JOURNAL.md  ROADMAP.md  SPEC.md  STATE.md  TODO.md
.gsd/phases/1/: 1-PLAN.md  2-PLAN.md
.gsd/phases/2/: 1-PLAN.md  2-PLAN.md
.gsd/phases/3/: 1-PLAN.md  2-PLAN.md
.gsd/phases/4/: 1-PLAN.md
.gsd/phases/5/: 1-PLAN.md  2-PLAN.md
.gsd/phases/6/: 1-PLAN.md  2-PLAN.md
scripts/: build_baseline.py  download_datasets.py  eval_checkpoint.py  generate_raft_data.py  run_finetuning.py  serve_vllm.py  verify_gpu.py
src/: config.py
src/data/: chunking.py  embedding.py  ingestion.py
src/data/loaders/: cfpb.py
src/raft/: dataset.py  synthesis.py  validation.py
src/training/: config.py  finetune.py
